--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "py3.6-env/bin/python3.6"
+    "python.pythonPath": "py3.6-env/bin/python3.6",
+    "files.associations": {
+        "algorithm": "cpp"
+    }
 }
