--- a/hackerrank/.vscode/settings.json
+++ b/hackerrank/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "py3.7env/bin/python",
+    "python.pythonPath": "/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
