added json files

--- a/hackerrank/30-days-of-code/.vscode/settings.json
+++ b/hackerrank/30-days-of-code/.vscode/settings.json
@@ -2,5 +2,11 @@
     "files.associations": {
         "*.tcc": "cpp",
         "string": "cpp"
+    },
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
     }
 }
