--- a/hackerrank/30-days-of-code/.vscode/settings.json
+++ b/hackerrank/30-days-of-code/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "files.associations": {
         "*.tcc": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "vector": "cpp",
+        "system_error": "cpp",
+        "array": "cpp",
+        "regex": "cpp"
     },
     "files.exclude": {
         "**/.classpath": true,
