--- a/hackerrank/30-days-of-code/.vscode/settings.json
+++ b/hackerrank/30-days-of-code/.vscode/settings.json
@@ -8,7 +8,8 @@
         "vector": "cpp",
         "system_error": "cpp",
         "array": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "iosfwd": "cpp"
     },
     "files.exclude": {
         "**/.classpath": true,
